--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "files.exclude": {
     ".vscode": true,
     "node_modules": true,
-    "package-lock.json": true
+    "package-lock.json": true,
+    ".gitignore": true,
+    "README.md": true,
+    "package.json": true
   }
 }
