--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "modbus-serial": "^7.7.3",
     "mongodb": "^3.3.3",
     "remotedev-server": "^0.3.1",
+    "serialport": "^8.0.5",
     "socketio": "^1.0.0"
   },
   "devDependencies": {},
