--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
   "files.exclude": {
     ".vscode": true,
-    "node_modules": true,
     "package-lock.json": true,
     ".gitignore": true,
     "README.md": true,
     "package.json": true,
-    "remotedev.js": true
-  }
+    "remotedev.js": true,
+    "node_modules": true
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
