--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/mongodb": "^3.3.12",
+    "@types/serialport": "^7.0.4",
     "@types/socket.io": "^2.1.4",
     "express": "^4.17.1",
-    "modbus.ts": "^3.1.41",
+    "modbus-serial": "^7.7.3",
     "mongodb": "^3.3.3",
     "remotedev-server": "^0.3.1",
     "socketio": "^1.0.0",
