--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "dependencies": {
     "@types/express": "^4.17.2",
-    "@types/mongodb": "^3.3.12",
+    "@types/nedb": "^1.8.9",
     "@types/serialport": "^7.0.4",
     "@types/socket.io": "^2.1.4",
     "express": "^4.17.1",
     "modbus-serial": "^7.7.3",
-    "mongodb": "^3.3.3",
+    "nedb": "^1.8.0",
     "remotedev-server": "^0.3.1",
     "socketio": "^1.0.0",
     "sqlite3": "^4.1.1",
