--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/nedb": "^1.8.9",
     "@types/serialport": "^7.0.4",
     "@types/socket.io": "^2.1.4",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "modbus-serial": "^7.7.3",
     "nedb": "^1.8.0",
