--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "description": "Node-based server for Leds project",
   "main": "server.js",
   "dependencies": {
-    "@types/express": "^4.17.2",
-    "@types/nedb": "^1.8.9",
-    "@types/serialport": "^7.0.4",
-    "@types/socket.io": "^2.1.4",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "modbus-serial": "^7.7.3",
-    "nedb": "^1.8.0",
-    "remotedev-server": "^0.3.1",
-    "socketio": "^1.0.0",
-    "sqlite3": "^4.1.1",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.3"
+    "@types/express": "4.17.21",
+    "@types/nedb": "1.8.16",
+    "@types/serialport": "8.0.5",
+    "@types/socket.io": "3.0.2",
+    "body-parser": "1.20.2",
+    "express": "4.19.2",
+    "modbus-serial": "8.0.17",
+    "nedb": "1.8.0",
+    "remotedev-server": "0.3.1",
+    "socketio": "1.0.0",
+    "sqlite3": "5.1.7",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.5.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly ./build/server.js",
-    "prod": "tsc && node ./build/build.js ./server.js"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "prod": "tsc && node ./build/server.js"
   },
   "repository": {
     "type": "git",
